Visual de perfil terminado tambien retocados algunos errores y pulir cosas del trello

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
         android:id="@+id/textViewInicia"
         android:layout_width="175dp"
         android:layout_height="20dp"
-        android:text="@string/inicia_sesion_para_continuar"
+        android:text="@string/LoginToStart"
         android:textColor="#FFC107"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
@@ -62,7 +62,7 @@
         android:layout_width="208dp"
         android:layout_height="48dp"
         android:clickable="true"
-        android:text="@string/no_tienes_cuenta_registrate"
+        android:text="@string/noAccountTextView"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
