--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,14 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/dark_gray"
     tools:context=".LoginActivity">
 
     <TextView
         android:id="@+id/textViewErrekaFit"
         android:layout_width="178dp"
         android:layout_height="51dp"
-        android:background="@color/black"
         android:outlineAmbientShadowColor="#FFFFFF"
         android:outlineSpotShadowColor="#FFFFFF"
         android:shadowColor="#FFFFFF"
@@ -25,51 +24,41 @@
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.575"
-        tools:ignore="TextSizeCheck" />
-
-    <TextView
-        android:id="@+id/textViewInicia"
-        android:layout_width="175dp"
-        android:layout_height="20dp"
-        android:text="@string/LoginToStart"
-        android:textColor="#FFC107"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
-        app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline"
-        app:layout_constraintVertical_bias="0.696"
+        app:layout_constraintVertical_bias="0.925"
         tools:ignore="TextSizeCheck" />
 
     <TextView
         android:id="@+id/textViewLogin"
-        android:layout_width="175dp"
-        android:layout_height="20dp"
+        android:layout_width="249dp"
+        android:layout_height="40dp"
+        android:gravity="center"
         android:text="@string/loginTextView"
         android:textColor="#FFC107"
+        android:textSize="27sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
-        app:layout_constraintEnd_toStartOf="@+id/guideline3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline"
-        app:layout_constraintVertical_bias="0.324"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="TextSizeCheck" />
 
     <TextView
         android:id="@+id/textViewRegister"
-        android:layout_width="208dp"
-        android:layout_height="48dp"
+        android:layout_width="233dp"
+        android:layout_height="52dp"
         android:clickable="true"
+        android:gravity="center"
         android:text="@string/noAccountTextView"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.518"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline5"
-        app:layout_constraintVertical_bias="0.243"
+        app:layout_constraintTop_toBottomOf="@+id/button"
         tools:ignore="DuplicateIds,TextSizeCheck,VisualLintBounds" />
 
     <EditText
@@ -80,16 +69,19 @@
         android:backgroundTint="@color/white"
         android:contentDescription="@string/enter_password"
         android:ems="10"
+        android:hint="@string/passLogin"
         android:inputType="textPassword"
         android:labelFor="@id/editTextPassword"
         android:minHeight="48dp"
         android:textColor="#FFC107"
+        android:textColorHint="#9E9E9E"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
-        tools:ignore="EditableContentDescCheck" />
+        app:layout_constraintVertical_bias="0.456"
+        tools:ignore="ContentDescription,EditableContentDescCheck,LabelFor" />
 
     <EditText
         android:id="@+id/editTextLogin"
@@ -97,25 +89,29 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
         android:ems="10"
+        android:hint="@string/userLogin"
         android:importantForAutofill="no"
         android:inputType="text"
         android:labelFor="@id/editTextLogin"
         android:minHeight="48dp"
         android:textColor="#FFC107"
+        android:textColorHint="#9E9E9E"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:layout_constraintVertical_bias="0.315"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintVertical_bias="0.158"
+        tools:ignore="LabelFor,SpeakableTextPresentCheck" />
+
     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Remenber me "
         android:textColor="#FFC107"
-        app:layout_constraintBottom_toTopOf="@+id/guideline5"
-        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4"
@@ -126,54 +122,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Iniciar Sesion"
+        android:backgroundTint="@color/black"
         android:textColor="#FFD600"
-        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        app:layout_constraintBottom_toTopOf="@+id/textViewRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/checkBox"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox"
+        app:layout_constraintVertical_bias="0.333"
         tools:ignore="HardcodedText,VisualLintBounds" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:contentDescription="@string/todo"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="@+id/guideline"
-        app:srcCompat="@drawable/ic_launcher_foreground"
-        tools:ignore="ContentDescription,ImageContrastCheck" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="284dp" />
+        app:layout_constraintGuide_begin="240dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="449dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="177dp" />
+        app:layout_constraintGuide_begin="306dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="690dp" />
+        app:layout_constraintGuide_begin="546dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
@@ -183,5 +161,18 @@
         app:layout_constraintGuide_begin="834dp"
         tools:ignore="VisualLintBounds" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="177dp"
+        android:layout_height="148dp"
+        android:contentDescription="@string/todo"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.211"
+        app:srcCompat="@mipmap/ic_launcher"
+        tools:ignore="ContentDescription,ImageContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
