--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,23 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/dark_gray"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteY="-16dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/NameFiled"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/NameInputText"
-            app:layout_constraintBottom_toTopOf="@+id/SurNameFiled"
+            android:textColor="@color/white"
+            android:textColorHint="@color/light_gray"
+            app:layout_constraintBottom_toTopOf="@+id/guideline13"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userIdFiled"
+            app:layout_constraintTop_toTopOf="@+id/guideline12"
             tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />
 
         <com.google.android.material.textfield.TextInputEditText
@@ -28,10 +31,12 @@
             android:layout_height="wrap_content"
             android:hint="@string/User"
             android:minHeight="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/button3"
+            android:textColor="@color/white"
+            android:textColorHint="@color/light_gray"
+            app:layout_constraintBottom_toTopOf="@+id/guideline17"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dateFiled"
+            app:layout_constraintTop_toTopOf="@+id/guideline16"
             tools:ignore="VisualLintTextFieldSize" />
 
         <com.google.android.material.textfield.TextInputEditText
@@ -40,10 +45,12 @@
             android:layout_height="wrap_content"
             android:hint="@string/Surname"
             android:minHeight="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/emailFiled"
+            android:textColor="@color/white"
+            android:textColorHint="@color/light_gray"
+            app:layout_constraintBottom_toTopOf="@+id/guideline14"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/NameFiled"
+            app:layout_constraintTop_toTopOf="@+id/guideline13"
             tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />
 
         <com.google.android.material.textfield.TextInputEditText
@@ -52,11 +59,12 @@
             android:layout_height="wrap_content"
             android:hint="@string/userName"
             android:minHeight="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/NameFiled"
+            android:textColor="@color/white"
+            android:textColorHint="@color/light_gray"
+            app:layout_constraintBottom_toTopOf="@+id/guideline12"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/switch1"
-            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintTop_toTopOf="@+id/guideline7"
             tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />
 
         <com.google.android.material.textfield.TextInputEditText
@@ -65,11 +73,12 @@
             android:layout_height="wrap_content"
             android:hint="@string/Mail"
             android:minHeight="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/dateFiled"
+            android:textColor="@color/white"
+            android:textColorHint="@color/light_gray"
+            app:layout_constraintBottom_toTopOf="@+id/guideline15"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/SurNameFiled"
+            app:layout_constraintTop_toTopOf="@+id/guideline14"
             tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />
 
         <com.google.android.material.textfield.TextInputEditText
@@ -78,24 +87,39 @@
             android:layout_height="wrap_content"
             android:hint="@string/birthDate"
             android:minHeight="48dp"
-            android:textColorHint="#546E7A"
-            app:layout_constraintBottom_toTopOf="@+id/editText4"
+            android:textColor="@color/white"
+            android:textColorHint="@color/light_gray"
+            app:layout_constraintBottom_toTopOf="@+id/guideline16"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emailFiled"
+            app:layout_constraintTop_toTopOf="@+id/guideline15"
             tools:ignore="VisualLintTextFieldSize" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="408dp"
             android:layout_height="51dp"
+            android:layout_marginBottom="44dp"
+            android:backgroundTint="@color/black"
+            android:text="@string/loadInfo"
+            app:layout_constraintBottom_toTopOf="@+id/button5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline17"
+            tools:ignore="VisualLintButtonSize" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="161dp"
+            android:layout_height="48dp"
+            android:backgroundTint="@color/black"
             android:text="@string/buttonBack"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.6"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText4"
-            app:layout_constraintVertical_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/guideline8"
+            app:layout_constraintTop_toBottomOf="@+id/button3"
+            app:layout_constraintVertical_bias="0.84"
             tools:ignore="VisualLintButtonSize" />
 
         <Switch
@@ -104,6 +128,7 @@
             android:layout_height="wrap_content"
             android:minHeight="48dp"
             android:text="@string/SwitchThemeChager"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/guideline7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline8"
@@ -118,11 +143,53 @@
             app:layout_constraintGuide_begin="71dp" />
 
         <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="180dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="365dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="501dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline17"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="580dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="432dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="286dp" />
+
+        <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="279dp" />
+            app:layout_constraintGuide_begin="240dp" />
 
         <com.google.android.material.chip.ChipGroup
             android:layout_width="173dp"
