--- a/app/src/main/res/layout/activity_workouts.xml
+++ b/app/src/main/res/layout/activity_workouts.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_gray">
+    android:background="@color/dark_gray"
+    tools:ignore="VisualLintBounds">
 
     <ImageView
         android:id="@+id/imageView3"
@@ -114,6 +115,13 @@
         android:orientation="vertical"
         app:layout_constraintGuide_begin="263dp" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline23"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="129dp" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="171dp"
@@ -147,5 +155,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:ignore="LabelFor,SpeakableTextPresentCheck" />
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="119dp"
+        android:layout_height="379dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintEnd_toStartOf="@+id/guideline23"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline9" />
+
+    <ListView
+        android:layout_width="271dp"
+        android:layout_height="378dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline23"
+        app:layout_constraintTop_toTopOf="@+id/guideline9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
