--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.GymAppXML" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <style name="Theme.GymAppXML" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <item name="android:background">@color/white</item>
         <item name="colorPrimaryVariant">@color/white</item>
         <item name="android:editTextColor">@color/black</item>
