--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.GymAppXML" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.GymAppXML" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/dark_gray</item>
         <item name="android:background">@color/dark_gray</item>
         <item name="colorPrimaryVariant">@color/dark_gray</item>
@@ -9,5 +9,5 @@
         <item name="colorError">@color/red</item>
     </style>
 
-    <style name="Theme.GymAppXML" parent="Base.Theme.GymAppXML" />
+
 </resources>
