--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,11 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.GymAppXML" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <style name="Base.Theme.GymAppXML" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:background">@color/white</item>
-        <item name="colorPrimaryVariant">@color/white</item>
-        <item name="android:editTextColor">@color/black</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:button">@color/black</item>
-        <item name="colorError">@color/red</item>
+        <item name="android:editTextColor">@color/black</item>
     </style>
 </resources>
