--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.GymAppXML" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/dark_gray</item>
-        <item name="android:background">@color/dark_gray</item>
-        <item name="colorPrimaryVariant">@color/dark_gray</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:button">@color/black</item>
-        <item name="colorError">@color/red</item>
+    <style name="Base.Theme.GymAppXML" parent="Theme.Material3.DayNight.NoActionBar">
+    <item name="android:background">@color/dark_gray</item>
     </style>
 
-
+<style name="Theme.GymAppXML" parent="Base.Theme.GymAppXML" />
 </resources>
