--- a/app/src/main/res/values-en-rUS/EnglishVer.xml
+++ b/app/src/main/res/values-en-rUS/EnglishVer.xml
@@ -15,6 +15,8 @@
     <string name="filterButton">Filter</string>
     <string name="trainerButton">Trainer</string>
     <string name="userLvl">User level: </string>
+    <string name="txt_ok">OK!</string>
+    <string name="videoButtonTxt">Reproduce video</string>
     <string name="passLogin">Password</string>
     <string name="enter_user">Log_User</string>
     <string name="loginTextView">Login in</string>
