opcion lenguaje actualizado

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -110,19 +110,6 @@
             app:layout_constraintVertical_bias="0.745"
             tools:ignore="VisualLintButtonSize" />
 
-        <Switch
-            android:id="@+id/switch1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minHeight="48dp"
-            android:text="@string/SwitchThemeChager"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toTopOf="@+id/guideline7"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline8"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline7"
             android:layout_width="wrap_content"
@@ -180,23 +167,33 @@
             app:layout_constraintGuide_begin="240dp" />
 
 
-        <Spinner
-            android:id="@+id/spinnerLan"
-            android:layout_width="155dp"
-            android:layout_height="52dp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline7"
-            app:layout_constraintEnd_toStartOf="@+id/switch1"
-            app:layout_constraintHorizontal_bias="0.122"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.421" />
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="708dp" />
+
+        <Spinner
+            android:id="@+id/spinner2"
+            android:layout_width="133dp"
+            android:layout_height="61dp"
+            app:layout_constraintBottom_toTopOf="@+id/userIdFiled"
+            app:layout_constraintEnd_toStartOf="@+id/spinner3"
+            app:layout_constraintHorizontal_bias="0.148"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.193" />
+
+        <Spinner
+            android:id="@+id/spinner3"
+            android:layout_width="133dp"
+            android:layout_height="61dp"
+            app:layout_constraintBottom_toTopOf="@+id/userIdFiled"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/spinner2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.193" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
