--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,4 +5,9 @@
     </style>
 
 <style name="Theme.GymAppXML" parent="Base.Theme.GymAppXML" />
+    <style name="lighttheme" parent = "Base.Theme.GymAppXML">
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:editTextColor">@color/black</item>
+    </style>
 </resources>
