Todo funcionan menos el cambio de tema y algun detalles

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -178,6 +178,7 @@
             android:id="@+id/spinner2"
             android:layout_width="133dp"
             android:layout_height="61dp"
+            style="@style/spinner_style"
             app:layout_constraintBottom_toTopOf="@+id/userIdFiled"
             app:layout_constraintEnd_toStartOf="@+id/spinner3"
             app:layout_constraintHorizontal_bias="0.148"
@@ -189,6 +190,7 @@
             android:id="@+id/spinner3"
             android:layout_width="133dp"
             android:layout_height="61dp"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/userIdFiled"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/spinner2"
