--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,4 +10,8 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:editTextColor">@color/black</item>
     </style>
+    <style name="spinner_style">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
