--- a/app/src/main/res/layout/activity_trainer.xml
+++ b/app/src/main/res/layout/activity_trainer.xml
@@ -3,18 +3,176 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/dark_gray"
+    tools:ignore="VisualLintBounds">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="363dp"
-        android:layout_height="119dp"
-        android:textSize="34sp"
-        android:text="Entrenador!!"
-        android:gravity="center"
-        android:textColor="@color/white"
+    <ListView
+        android:id="@+id/workoutList"
+        android:layout_width="165dp"
+        android:layout_height="295dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintEnd_toStartOf="@+id/exerciseView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline9"
+        app:layout_constraintVertical_bias="0.082" />
+
+    <ListView
+        android:id="@+id/exerciseView"
+        android:layout_width="211dp"
+        android:layout_height="361dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/workoutList"
+        app:layout_constraintTop_toTopOf="@+id/guideline9" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="72dp"
+        android:layout_height="65dp"
+        android:contentDescription="@string/todo"
+        app:layout_constraintBottom_toTopOf="@+id/guideline11"
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/ic_launcher"
+        tools:ignore="ContentDescription,ImageContrastCheck" />
+
+
+    <Button
+        android:id="@+id/workoutFilteringBtn"
+        android:layout_width="131dp"
+        android:layout_height="62dp"
+        android:backgroundTint="@color/black"
+        android:text="@string/filterButton"
+        app:layout_constraintBottom_toTopOf="@+id/guideline9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/editNumberText"
+        app:layout_constraintTop_toTopOf="@+id/guideline11"
+        app:layout_constraintVertical_bias="0.115" />
+
+    <Button
+        android:id="@+id/workoutBackBtn"
+        android:layout_width="114dp"
+        android:layout_height="48dp"
+        android:backgroundTint="@color/black"
+        android:text="@string/buttonBack"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/workoutBackBtn5"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline3"
+        app:layout_constraintVertical_bias="0.75" />
+
+    <Button
+        android:id="@+id/workoutBackBtn5"
+        android:layout_width="194dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="92dp"
+        android:backgroundTint="@color/black"
+        android:text="@string/videoButtonTxt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/workoutBackBtn"
+        app:layout_constraintTop_toTopOf="@+id/guideline3"
+        app:layout_constraintVertical_bias="0.625" />
+
+    <Button
+        android:id="@+id/trainerModifyButton"
+        android:layout_width="114dp"
+        android:layout_height="48dp"
+        android:backgroundTint="@color/black"
+        android:text="@string/modifyButton"
+        app:layout_constraintBottom_toTopOf="@+id/guideline9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/trainerAddBtn"
+        app:layout_constraintTop_toTopOf="@+id/guideline11"
+        app:layout_constraintVertical_bias="0.795" />
+
+    <Button
+        android:id="@+id/trainerDeleteBtn"
+        android:layout_width="114dp"
+        android:layout_height="48dp"
+        android:backgroundTint="@color/black"
+        android:text="@string/deleteButton"
+        app:layout_constraintBottom_toTopOf="@+id/guideline9"
+        app:layout_constraintEnd_toStartOf="@+id/trainerAddBtn"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/guideline11"
+        app:layout_constraintVertical_bias="0.795" />
+
+    <Button
+        android:id="@+id/trainerAddBtn"
+        android:layout_width="114dp"
+        android:layout_height="48dp"
+        android:backgroundTint="@color/black"
+        android:text="@string/addButton"
+        app:layout_constraintBottom_toTopOf="@+id/guideline9"
+        app:layout_constraintEnd_toStartOf="@+id/trainerModifyButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/trainerDeleteBtn"
+        app:layout_constraintTop_toTopOf="@+id/guideline11"
+        app:layout_constraintVertical_bias="0.795" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="251dp"
+        android:layout_height="47dp"
+        android:gravity="center"
+        android:text="@string/trainerTitle"
+        android:textColor="#FFC107"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline11"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.363"
+        tools:ignore="TextSizeCheck" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="667dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="297dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="88dp" />
+
+    <EditText
+        android:id="@+id/editNumberText"
+        android:layout_width="241dp"
+        android:layout_height="68dp"
+        android:backgroundTint="@color/white"
+        android:ems="10"
+        android:hint="@string/filterHint"
+        android:importantForAutofill="no"
+        android:inputType="number"
+        android:labelFor="@id/editTextLogin"
+        android:minHeight="48dp"
+        android:textColorHint="#9E9E9E"
+        app:layout_constraintBottom_toTopOf="@+id/guideline9"
+        app:layout_constraintEnd_toStartOf="@+id/workoutFilteringBtn"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline11"
+        app:layout_constraintVertical_bias="0.12"
+        tools:ignore="LabelFor,SpeakableTextPresentCheck" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
